# nes-emulator

./: Cargo.toml  README.md  flake.nix  hello_world.asm6502  index.html  rust-toolchain.toml  styles.css
emulator/: Cargo.toml  snake6502.asm6502
emulator/src/: bus.rs  lib.rs
emulator/src/cpu/: addressing_mode.rs  flags.rs  memory.rs  mod.rs  opcode.rs  stack.rs
native/: Cargo.toml
native/src/: main.rs
src/: app.rs  bus.rs  cpu.rs  main.rs  opcodes.rs  pixel.glsl
src-tauri/: Cargo.toml  tauri.conf.json
src/cpu/: addressing_mode.rs  memory.rs  mod.rs  opcode.rs  stack.rs
