[package]
name = "nes-emulator-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
emulator = { path = "./emulator/" }
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr"] }
log = "0.4.22"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["CanvasRenderingContext2d"] }

[workspace]
members = ["src-tauri", "emulator"]
